--- a/index.html
+++ b/index.html
@@ -125,10 +125,17 @@
             </h3>
 
             <h4>
-                My name is Carlos Henrique, 29 years old. 
-                I have lived in Dublin for 5 years I am studying Full Stack Dev. at Escola Code Institute in 2024 - In the meantime 
-                I work as an Affiliate / Freelancer and provide services in some areas in the Digital Market. 
-                I am currently open to opportunities in this area, whether as a Freelancer or Intern in a company.
+              Hello, I'm Carlos Henrique, a dedicated professional passionate about the digital world. 
+              At 28 years old, I have had a multicultural journey, having lived in Lisbon, Portugal, for 3 years before settling in Dublin, Ireland, 2 years ago.
+              During my time in Dublin, I have been actively involved in the field of technology, currently studying Full Stack Development at the Code Institute School, with an expected completion date in 2024.
+              This learning journey has been an enriching experience, allowing me to explore what I truly want in my life.
+              While dedicating myself to my studies, I also work as an Affiliate and Freelancer, offering services in various areas of the digital market. 
+              My experience as a Freelancer has provided me with a comprehensive understanding of market needs and demands, while honing my technical and communication skills.
+              Currently, I am open to new opportunities in the field of web development and digital marketing. Whether as a Freelancer or an intern at a company, 
+              I am committed to making a significant contribution and continuously learning to drive project success.
+              I am excited about the possibilities the future holds and eager to collaborate on innovative and challenging projects. 
+              If you are interested in working together or have any opportunities to discuss, please don't hesitate to reach out.
+              Thank you for visiting my website and exploring my professional journey.
             </h4>
 
             <h4>
