change image project index.html

--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
               <div class="swiper-slide card-project">
                 <div class="image-project">
                   <a href="">
-                    <img src="./img/conversor.jpg" alt="img-conversor">
+                    <img src="./img/Website_gambar.jpg" alt="img-conversor">
                   </a>
                 </div>
     
