--- a/index.html
+++ b/index.html
@@ -155,19 +155,28 @@
  <!-- Projects end -->
 
      <!-- Contacts-FORM -->
-    <section class="form">
-        <div class="interface">
-            <h2 class="title">SEND <span>A Message.</span></h2>
-
-            <form action="">
-                <input type="text" name="" id="" placeholder="Your Name:" required>
-                 <input type="text" name="" id="" placeholder="Your E-mail:" required>
-                <input type="text" name="" id="" placeholder="Phone Number:">
-                <textarea name="" id="" placeholder="Your Message" required></textarea>
-                <div class="btn-send"><input type="submit" value="SEND YOU MESSAGE"></div>
+     <section class="form-container">
+        <div class="container">
+            <form>
+                <h1>Entre em contato</h1>
+                <p>Preencha o formulário abaixo e entraremos em contato com você</p>
+                <div class="input-single">
+                    <input class="input" type="text" id="nome" required>
+                    <label for="nome">Seu nome completo</label>
+                </div>
+                <div class="input-single">
+                    <input class="input" type="text" id="email" required>
+                    <label for="email">Seu e-mail</label>
+                </div>
+                <div class="input-single">
+                    <input class="input" type="text" id="telefone" required>
+                    <label for="telefone">Seu telefone</label>
+                </div>
+                <div class="btn"><input type="submit" value="Enviar"></div>
             </form>
-        </div>    
+        </div><!--container-->
     </section>
+    
     <!-- Contacts-FORM END -->
     
     <section id="contacts">
