--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 
     <section class="about-new">
       <div class="main">
-         <img scr="./img/2024" alt="image-about">
+         <img src="./img/2024">
           <div class="about-text">
              <h1>About Us</h1>
               <h5>Junior Developer Full Stack</h5>
