--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 
     <section class="about-new">
       <div class="main">
-         <img src="./img/2024(1).png">
+         <img src="img/2024 (1).png">
           <div class="about-text">
              <h1>About Us</h1>
               <h5>Junior Developer Full Stack</h5>
