--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
          <img src="img/01.png">
           <div class="about-text">
              <h1>About Us</h1>
-              <h5> <p>💻</p> <span>Junior Developer</span> Full Stack</h5>
+              <h5> <span>Junior Developer</span> Full Stack</h5>
               <p>Carlos Henrique, a dedicated professional passionate about the digital world, with a multicultural background living in Lisbon, Portugal, before settling in Dublin, Ireland, two years ago. 
              Actively involved in technology, currently studying Full Stack Development at the Code Institute School, with an expected completion date in 2024. 
              Also works as an Affiliate and Freelancer, offering services in various digital market areas. 
