--- a/index.html
+++ b/index.html
@@ -112,11 +112,9 @@
              Also works as an Affiliate and Freelancer, offering services in various digital market areas. 
              Experienced in understanding market needs and demands, committed to making a significant contribution in web development and digital marketing. 
              Eager to collaborate on innovative pr ojects and open to new opportunities.</p>
-
-             <h4>
-             Click Below to get my <p>CV</p>
-            </h4>
-
+            
+             <p>Click Below to get my</p> <p>CV</p>
+            
               <div class="button-cta">
                 <a href="public/document/CARTA DE APRESENTACAO3.pdf" download="Carlos-Presentation-Letter" aria-label="download CV">
                     Presentation Letter
