--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
              Experienced in understanding market needs and demands, committed to making a significant contribution in web development and digital marketing. 
              Eager to collaborate on innovative pr ojects and open to new opportunities.</p>
             
-             <p>Click Below to get my</p> <p>CV</p>
+             <p>Click Below to get my CV</p> 
             
               <div class="button-cta">
                 <a href="public/document/CARTA DE APRESENTACAO3.pdf" download="Carlos-Presentation-Letter" aria-label="download CV">
