--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
         <div class="interface">
             <h2 class="title">Talk<span>Us</span></h2>
 
-            <form aciton="">
+            <form action="">
                 <input type="text" name="" id="" placeholder="Name:" required>
                 <input type="text" name="" id="" placeholder="E-mail:"required>
                 <input type="text" name="" id="" placeholder="Phone:">
