--- a/index.html
+++ b/index.html
@@ -133,10 +133,10 @@
             <h2 class="title">Talk<span>Us</span></h2>
 
             <form action="">
-                <input type="text" name=""  placeholder="Name:" required>
-                <input type="text" name=""  placeholder="E-mail:"required>
-                <input type="text" name=""  placeholder="Phone:">
-                <textarea name="" placeholder="Yours Message" required></textarea>
+                <input type="text" name="" id="" placeholder="Name:" required>
+                <input type="text" name="" id="" placeholder="E-mail:"required>
+                <input type="text" name="" id="" placeholder="Phone:">
+                <textarea name="" id="" placeholder="Yours Message" required></textarea>
                 <div class="btn-send"><input type="submit" value="SEND"></div>
             </form>     
     
