--- a/index.html
+++ b/index.html
@@ -128,6 +128,8 @@
     </section>
      <!-- End about -->
 
+    <!-- Start Forms -->
+    
     <section class="forms">
         <div class="interface">
             <h2 class="title">Talk<span>Us</span></h2>
