--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
     
     <section class="about-new">
       <div class="main">
-         <img src="img/01.png">
+         <img src="./img/carlos.jpg">
           <div class="about-text">
              <h1>About Us</h1>
               <h5> <span>Junior Developer</span> Full Stack</h5>
