--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <section id="header">
       <a class="header-title" href="/">
         <h1>
-          Welcome Ladies and Gentlemen
+          Welcome
         </h1>
       </a>
   
@@ -110,7 +110,10 @@
             <div class="text">
                 <h1>About Us</h1>
                 <h5> <span>Junior Developer</span><br> Full Stack<br></h5>
-                <p>Carlos Henrique, a dedicated professional passionate about the digital world, with a multicultural background living in Lisbon, Portugal, before settling in Dublin, Ireland, two years ago. Actively involved in technology, currently studying Full Stack Development at the Code Institute School, with an expected completion date in 2024. Also works as an Affiliate and Freelancer, offering services in various digital market areas. Experienced in understanding market needs and demands, committed to making a significant contribution in web development and digital marketing. Eager to collaborate on innovative projects and open to new opportunities.</p>
+                <p>Carlos Henrrique, a dedicated professional passionate about the digital world, with a multicultural background living in Lisbon, Portugal, before settling in Dublin, Ireland, two years ago. Actively involved in technology, currently studying Full Stack Development at the Code Institute School, with an expected completion date in 2024.
+                <p>Also works as an Affiliate and Freelancer, offering services in various digital market areas.
+                <p> Experienced in understanding market needs and demands, committed to making a significant contribution in web development and digital marketing. 
+                <p>Eager to collaborate on innovative projects and open to new opportunities.<p></p>
                 <p>Click Below to get my CV</p>
                 <div class="button-cta">
                     <a href="public/document/CARTA DE APRESENTACAO3.pdf" download="Carlos-Presentation-Letter" aria-label="download CV">
