--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
    <section class="about-new">
     <div class="main">
         <div class="about-content">
-            <img src="./img/carlos.jpg" class="profile-image">
+            <img src="./img/carlos.jpg" class="profile-image" style="max-width: 100%; width: 50%;">
             <div class="text">
                 <h1>About Us</h1>
                 <h5> <span>Junior Developer</span><br> Full Stack<br></h5>
