--- a/index.html
+++ b/index.html
@@ -134,8 +134,8 @@
 
             <form action="https://formsubmit.co/carloshenrrique296@gmail.com" method="POST">
                 <input type="text" name="" id="" placeholder="Name:" required>
-                <input type="text" name="" id="" placeholder="E-mail:"required>
-                <input type="text" name="" id="" placeholder="Phone:">
+                <input type="email" name="" id="" placeholder="E-mail:"required>
+                <input type="phone" name="" id="" placeholder="Phone:">
                 <textarea name="" id="" placeholder="Yours Message" required></textarea>
                 <div class="btn-send"><input type="submit" value="SEND MESSAGE"></div>
             </form>     
