--- a/index.html
+++ b/index.html
@@ -133,10 +133,10 @@
             <h2 class="title">Talk<span>Us</span></h2>
 
             <form action="https://formsubmit.co/carloshenrrique296@gmail.com" method="POST">
-                <input type="text" name="" id="" placeholder="Name:" required>
-                <input type="email" name="" id="" placeholder="E-mail:"required>
-                <input type="phone" name="" id="" placeholder="Phone:">
-                <textarea name="" id="" placeholder="Yours Message" required></textarea>
+                <input type="text" name="name"  placeholder="Name:" required>
+                <input type="email" name="email"  placeholder="E-mail:"required>
+                <input type="phone" name="phone"  placeholder="Phone:">
+                <textarea name="message"  placeholder="Your Message" required></textarea>
                 <div class="btn-send"><input type="submit" value="SEND MESSAGE"></div>
             </form>     
     
