--- a/Thanks.html
+++ b/Thanks.html
@@ -4,9 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Thanks Forms</title>
-    <h1>Thank you in a few minutes I will respond</h1>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <p>Email Successfully Sent</p>
+    <div class="container">
+        <div class="content">
+            <h1>Thank You!</h1>
+            <p>Your message has been sent successfully. We'll get back to you as soon as possible.</p>
+            <a href="index.html" class="btn">Back to Home</a>
+        </div>
+    </div>
 </body>
 </html>
